                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.2

  *) [TS-1082] Obey existing optimizer CXXFLAGS and CFLAGS at configure time.

  *) [TS-1077] All proxy ports are now configured by
   proxy.config.http.server_ports. All other port configuration values
   are deprecated.

  *) [TS-1091] CFLAGS=-w` causes configure script to wrongly guess style of
   `gethostbyname_r` on BSD flavors. Author: Marc Abramowitz.

  *) [TS-1073] no_dns_just_forward_to_parent configuration parameter is
   ignored/not used. Author: Kevin Giles.

  *) [TS-996] HTTPHdr::m_host goes stale if HdrHeap::evacuate_from_str_heaps
   is called. Author: B. Wyatt.

  *) [TS-1041] Populate sockaddr length. Author: James Peach.

  *) [TS-1081] Eliminate an additional copy of the pristine URL string.

  *) [TS-1038] SHttpTxnErrorBodySet() can leak memory.
   Author: Brian Geffon

  *) [TS-1049] TS hangs (dead lock) on HTTPS POST requests.
   Author: Wilson Ho

  *) [TS-1056] Lost UA connections can show up as "400 ERR_INVALID_REQ"
   in logs.

  *) [TS-1048] Add TS API to enable plugins to use traffic server
   configuration infrastructure. Author: Bianca Cooper.

  *) [TS-1074] PluginVC should schedule to the local queue instead of the
  external queue. Author: Brian Geffon

  *) [TS-1032] Assertion when upstream connection is established (with event
   handled by thread A) and immediately disconnected (handled by thread B).
   Author: Uri Shachar.

  *) [TS-1052] trafficserver restart does not work (needs to let the old
   process die). Author: Billy Viera

  *) [TS-1044] Fix TSVConn{Read,Write}VIOGet in UnixNetVConnection.
    Author: James Peach.

  *) [TS-1040] Teach TSHostLookup to use const. Author: James Peach.

  *) [TS-1071] Debug statement in FetchSM broken. Author: Brian Geffon.

  *) [TS-1057] Expose Base64-encoding through APIs.
   Author: Yakov Kopel and leif
